# actix-tensorflow-example

./: .gitignore  Dockerfile  README.md  requirements.txt
client/: client.py
saved_model/: saved_model.pb
saved_model/variables/: variables.data-00000-of-00001  variables.index
server/: Cargo.toml
server/src/: main.rs  mnist_model.rs
training/: train.py
