[package]
name = "actix-tf-server"
version = "0.2.0"
authors = ["kylekosic <kylekosic@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version="3.0", features=["openssl"] }
anyhow = "1.0"
base64 = "0.12"
env_logger = "0.7"
image = "0.23"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tensorflow = "0.16"

